# cpp-cmake-vcpkg-demo

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-windows.sh  mingw-toolchain.cmake  mingw-w64-toolchain.cmake
.github/workflows/: deploy.yml
src/: main.cpp
